rework paper module