@@ -4,8 +4,6 @@ plugins {
     `paper-plugin`
 }
 
-project.version = "1.8"
-
 dependencies {
     compileOnlyApi(libs.bundles.plugins)
 
@@ -14,30 +12,10 @@ dependencies {
     api(projects.core)
 }
 
-val javaComponent: SoftwareComponent = components["java"]
-
 tasks {
-    publishing {
-        publications {
-            create<MavenPublication>("maven") {
-                from(javaComponent)
-
-                group = "com.ryderbelserion.vital"
-                artifactId = project.name.lowercase()
-                version = "${project.version}"
-            }
-        }
-    }
-
     shadowJar {
-        mergeServiceFiles()
-
         manifest {
             from(project(":core").tasks.named<Jar>("shadowJar").get().manifest)
         }
-    }
-
-    compileJava {
-        options.compilerArgs.add("--enable-preview")
     }
 }
